plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.9'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'checkstyle'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'Spot for pickup'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.10'

	runtimeOnly 'org.postgresql:postgresql'

	// Test dependencies
	testRuntimeOnly 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// postgreSQL
	implementation 'org.postgresql:postgresql'
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs (
			'-XX:+EnableDynamicAgentLoading',
			'-Xshare:off'
	)
}

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
}

checkstyle {
	toolVersion = '10.25.0'
	configFile = file("${rootProject.projectDir}/config/checkstyle/checkstyle.xml")
	maxWarnings = 0
	ignoreFailures = false
}

configurations.checkstyle {
	resolutionStrategy.eachDependency { details ->
		if (details.requested.group == 'org.apache.commons' && details.requested.name == 'commons-lang3') {
			details.useVersion '3.18.0'
		}
	}
}

tasks.withType(Checkstyle) {
	reports {
		xml.required = true
		html.required = true
	}
}